--- a/DS_LAB3_R.ipynb
+++ b/DS_LAB3_R.ipynb
@@ -885,7 +885,8 @@
         "corr_cols <- c(\"trip_distance\", \"fare_amount\", \"tip_amount\")\n",
         "corr_matrix <- cor(\n",
         "  df[, corr_cols],\n",
-        "  use = \"complete.obs\"\n",
+        "  use = \"complete.obs\",\n",
+        "  method=\"pearson\"\n",
         ")\n",
         "melted_corr <- melt(corr_matrix)\n",
         "\n",
